syntax = "proto3";
package ecommerce;

option go_package="gRPC_practice/order_management";

service OrderManagement {
    rpc getOrder(OrderID) returns (Order);
    rpc searchOrders(OrderID) returns (stream Order);
    rpc updateOrders(stream Order) returns (OrderID);
    rpc processOrders(stream OrderID) returns (stream CombinedShipment);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message OrderID {
    string value = 1;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order ordersList = 3;
}